# FastForge

./: LICENSE  README.md  pyproject.toml
fastforge/: cli.py
fastforge/templates/api/: README.md  pyproject.toml
fastforge/templates/api/app/: main.py
